fix background image jump

--- a/style.css
+++ b/style.css
@@ -109,10 +109,28 @@ body {
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   /* The text of the element and its sub-elements is not selectable. */
   user-select: none;
-  background-image: var(--background);
+  /* background-image: var(--background);
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-size: cover; */
+}
+
+.img {
+  background: var(--background);
+  background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+}
+
+.content {
+  position: absolute;
+  left: 50%;
+  margin-top: 5rem;
+  transform: translateX(-50%);
+  width: 80%;
 }
 
 /*======================== HEADER ======================*/
@@ -235,7 +253,7 @@ body.hasTouch .active-arrow {
 }
 
 .darkmode {
-  background: var(--body-dark);
+  --background: var(--body-dark);
   --shadow-color: 145deg 100% 0%;
 
   --light-color-board: var(--green-board-light);
